deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-helados
  labels:
    app: app-helados
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      octopuseexport: octopuseexport
  template:
    metadata:
      labels:
        app: app-helados
        octopuseexport: octopuseexport
    spec:
      containers:
      - name: app-helados
        image: uliseslpz/helados2:latest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
