service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-helados
  labels:
    app: app-helados
spec:
  selector:
    app: app-helados
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: LoadBalancer
