ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-helados
spec:
  rules:
  - host: api.dlopez.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-helados
            port:
              number: 80
